<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="2">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/black">

            </RelativeLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/image_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:paddingTop="@dimen/dp20"
            android:src="@drawable/logo" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/rl_signup"
            android:layout_below="@+id/image_logo"
            android:background="@drawable/vectorlogin"
            android:orientation="vertical"
            android:padding="@dimen/dp40">


            <com.app.rationcart.utils.CustomTextView
                android:id="@+id/textOr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dp10"
                android:text="@string/or"
                android:textColor="@color/textcolordark"
                android:textSize="@dimen/text_size_12"
                android:visibility="gone" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp20">

                <EditText
                    android:id="@+id/edtName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp20"
                    android:gravity="start"
                    android:hint="@string/hint_enter_name"
                    android:inputType="text"
                    android:padding="@dimen/dp14" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_email1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:hint="@string/hint_enter_email"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/dp14" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_email2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtmobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:hint="@string/hint_enter_mbno"
                    android:inputType="number"
                    android:maxLength="10"
                    android:padding="@dimen/dp14" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_email3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:hint="@string/hint_enter_password"
                    android:inputType="textPassword"
                    android:padding="@dimen/dp14" />
            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="@dimen/dp10"
                android:background="@color/logocolor"
                android:text="@string/signup"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_15" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rel_signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true">

            <com.app.rationcart.utils.CustomTextView
                android:id="@+id/createAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="@dimen/dp10"
                android:paddingTop="@dimen/dp10"
                android:text="Existing User?"
                android:textColor="@color/textcolordark"
                android:textSize="@dimen/text_size_13" />

            <com.app.rationcart.utils.CustomTextView
                android:id="@+id/signin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/createAccount"
                android:paddingBottom="@dimen/dp10"
                android:paddingLeft="@dimen/dp10"
                android:paddingTop="@dimen/dp10"
                android:text="Sign in"
                android:textColor="@color/red"
                android:textSize="@dimen/text_size_13" />

        </RelativeLayout>


    </RelativeLayout>


</RelativeLayout>
