<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:orientation="vertical"
    tools:context="com.app.rationcart.fragment.FragmentHome">

    <RelativeLayout
        android:id="@+id/rl_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp10"
            android:background="@color/white"
            android:padding="@dimen/dp5">

            <TextView
                android:id="@+id/edt_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="Search Product"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:padding="5dp"
                android:textColor="@color/textcolordark"
                android:textSize="@dimen/text_size_14" />


            <ImageView
                android:id="@+id/image_search"
                android:layout_width="@dimen/dp25"
                android:layout_height="@dimen/dp25"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:padding="@dimen/dp5"
                android:src="@drawable/search_grey" />
        </RelativeLayout>

    </RelativeLayout>


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rl_pager"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <android.support.v4.view.ViewPager
                    android:id="@+id/pager"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <RelativeLayout
                    android:id="@+id/viewPagerIndicator"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="@dimen/dp10"
                    android:gravity="center">

                    <LinearLayout
                        android:id="@+id/viewPagerCountDots"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal" />

                </RelativeLayout>

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp5"
                android:background="@color/layout_bg"
                android:gravity="center"
                android:padding="@dimen/dp10"
                android:text="@string/shop_by_category"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_15" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/list_categories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp5"
                android:background="@color/layout_bg"
                android:gravity="center"
                android:padding="@dimen/dp10"
                android:text="@string/top_deals"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_15" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/list_topdeals"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp5"
                android:background="@color/layout_bg"
                android:gravity="center"
                android:padding="@dimen/dp10"
                android:text="@string/top_brands"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_15" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/list_topbrands"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</LinearLayout>
